--- a/backend/backend.WebApi/Properties/launchSettings.json
+++ b/backend/backend.WebApi/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7297;http://localhost:5297",
+      "applicationUrl": "https://0.0.0.0:5001;http://0.0.0.0::5001",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
