--- a/backend/backend.WebApi/appsettings.Development.json
+++ b/backend/backend.WebApi/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "Jwt": {
+    "Key": "this is my custom Secret key for authentication",
+    "Issuer": "CanbanServer"
+  },
+  "AllowedHosts": "*"
 }
